@@ -127,7 +127,7 @@ bool Graphics::drawImage(Image *image, int x, int y)
 }
 
 bool Graphics::drawImage(Image *image, int srcX, int srcY, int dstX, int dstY,
-        int width, int height)
+        int width, int height, bool)
 {
     // Check that preconditions for blitting are met.
     if (!mScreen || !image || !image->mImage) return false;
@@ -154,7 +154,7 @@ void Graphics::drawImage(gcn::Image const *image, int srcX, int srcY,
     ProxyImage const *srcImage =
         dynamic_cast< ProxyImage const * >(image);
     assert(srcImage);
-    drawImage(srcImage->getImage(), srcX, srcY, dstX, dstY, width, height);
+    drawImage(srcImage->getImage(), srcX, srcY, dstX, dstY, width, height, true);
 }
 
 void Graphics::drawImagePattern(Image *image, int x, int y, int w, int h)
